Removing unit conversion and fixing spacing

--- a/src/Forecast.css
+++ b/src/Forecast.css
@@ -28,7 +28,7 @@
 }
 
 .todays-forecast {
-  margin-bottom: 10px;
+  margin-bottom: 40px;
   text-align: center;
 }
 
@@ -37,8 +37,8 @@
   font-size: 40px;
   font-weight: 200;
   letter-spacing: 1px;
-  line-height: 28px;
-  margin: 0 auto 48px;
+  line-height: 1;
+  margin: 0 auto 40px;
   padding: 22px;
 }
 
